--- a/app/src/main/res/layout/fragment_my_produce.xml
+++ b/app/src/main/res/layout/fragment_my_produce.xml
@@ -4,8 +4,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.marketplace.MyProduceFragment">
+    android:background="@color/windowBackground">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_my_produce_fragment"
