--- a/app/src/main/res/layout/employment_information.xml
+++ b/app/src/main/res/layout/employment_information.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:background="@color/windowBackground"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <TextView
@@ -42,13 +43,12 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimen_20dp"
-                    android:layout_marginEnd="@dimen/dimen_20dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginBottom="@dimen/dimen_20dp"
-                    android:background="@color/white"
+                    android:background="@drawable/background_round_white"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/margin_15"
-                    android:paddingBottom="@dimen/margin_15">
+                    android:padding="@dimen/margin_15">
 
                     <TextView
                         android:layout_width="match_parent"
