--- a/app/src/main/res/layout/fragment_market_price.xml
+++ b/app/src/main/res/layout/fragment_market_price.xml
@@ -4,7 +4,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@color/windowBackground"
     tools:context="com.cabral.emaishapay.fragments.sell_fragment.MarketPriceFragment">
 
     <LinearLayout
