--- a/app/src/main/res/layout/fragment_product_rating_review_list.xml
+++ b/app/src/main/res/layout/fragment_product_rating_review_list.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/windowBackground"
     android:layout_marginTop="?actionBarSize"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ScrollView
