--- a/app/src/main/res/layout/fragment_update_account.xml
+++ b/app/src/main/res/layout/fragment_update_account.xml
@@ -405,7 +405,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccentGreen"
+        android:background="@color/colorPrimary"
         android:fontFamily="@font/josefin_sans"
         android:text="@string/save_changes"
         android:textColor="@color/white"
