--- a/app/src/main/res/layout/fragment_wallet_loan_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_details.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/windowBackground"
     tools:context="com.cabral.emaishapay.fragments.WalletLoanDetailsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -22,8 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccentLight"
-        android:orientation="vertical"
+       android:orientation="vertical"
         tools:context=".MainActivity">
 
 
@@ -83,7 +83,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="@drawable/background_round_white"
             android:orientation="vertical"
             android:padding="15dp"
             android:layout_marginTop="10dp">
