--- a/app/src/main/res/layout/fragment_wallet_loan_kyc_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_kyc_details.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBackgroundDark"
+    android:background="@color/windowBackground"
     tools:context="com.cabral.emaishapay.fragments.WalletLoanKycDetailsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar_wallet_loan_app_photos"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -76,7 +76,7 @@
                     android:layout_marginTop="10dp"
                     android:padding="10dp"
                     android:orientation="vertical"
-                    android:background="@color/white">
+                    android:background="@drawable/background_round_white">
 
                 <LinearLayout
                     android:layout_width="match_parent"
