--- a/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/windowBackground"
     tools:context="com.cabral.emaishapay.fragments.WalletLoanPreviewRequestFragment">
 
 
@@ -15,7 +16,7 @@
             android:id="@+id/toolbar_wallet_loan_preview_request"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -23,13 +24,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccentLight"
         tools:context=".activities.wallet.WalletLoanPreviewRequest">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorAccentLight"
             android:orientation="vertical"
             tools:context=".MainActivity">
 
