--- a/app/src/main/res/layout/fragment_wallet_transactions_list.xml
+++ b/app/src/main/res/layout/fragment_wallet_transactions_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccentLight">
+    android:background="@color/windowBackground">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
             android:id="@+id/toolbar_wallet_transactions_list"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/colorPrimary"
             android:elevation="@dimen/dimen_5dp"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
