--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -27,7 +27,7 @@
         android:orientation="vertical"
         android:padding="20dp"
         android:layout_marginTop="?actionBarSize"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -141,8 +141,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?actionBarSize"
+
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:id="@+id/location_layout"
@@ -192,23 +193,21 @@
 
         </LinearLayout>
 
-        <androidx.core.widget.NestedScrollView
+        <ScrollView
             android:id="@+id/mainRvLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cart_items_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="0dip"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1" />
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"/>
 
                 <Button
                     android:id="@+id/btn_clear_cart"
@@ -259,7 +258,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:background="@drawable/topcornerscurved"
                     android:elevation="@dimen/dimen_10dp"
                     android:padding="10dp">
@@ -312,7 +311,7 @@
             </LinearLayout>
 
 
-        </androidx.core.widget.NestedScrollView>
+        </ScrollView>
 
 
         <!--<LinearLayout
