Changes in cart

--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -193,10 +193,11 @@
 
         </LinearLayout>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:id="@+id/mainRvLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -311,7 +312,7 @@
             </LinearLayout>
 
 
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
 
         <!--<LinearLayout
