--- a/app/src/main/res/layout/buy_inputs_filter_dialog.xml
+++ b/app/src/main/res/layout/buy_inputs_filter_dialog.xml
@@ -43,7 +43,7 @@
                 app:max_value="100000"
                 app:left_thumb_image="@drawable/ic_adjust"
                 app:right_thumb_image="@drawable/ic_adjust"
-                app:bar_highlight_color="@color/colorAccentBlue"
+                app:bar_highlight_color="@color/colorPrimary"
                 />
 
         </LinearLayout>
@@ -133,9 +133,10 @@
             android:textAllCaps="false"
             android:textSize="18sp"
             android:textColor="@color/white"
-            android:textAlignment="center"
-            android:background="@color/colorAccentGrey"
-            android:gravity="center_horizontal" />
+            android:textStyle="bold"
+            android:background="@drawable/rectangular_red_solid"
+            android:gravity="center"
+            android:layout_marginEnd="5dp"/>
 
         <Button
             android:id="@+id/filter_clear_btn"
@@ -146,9 +147,10 @@
             android:textAllCaps="false"
             android:textSize="18sp"
             android:textColor="@color/white"
-            android:textAlignment="center"
-            android:background="@color/colorAccent"
-            android:gravity="center_horizontal" />
+            android:textStyle="bold"
+            android:background="@drawable/rectangular_black_solid"
+            android:gravity="center"
+            android:layout_marginEnd="5dp"/>
 
         <Button
             android:id="@+id/filter_apply_btn"
@@ -159,9 +161,9 @@
             android:textAllCaps="false"
             android:textSize="18sp"
             android:textColor="@color/white"
-            android:textAlignment="center"
-            android:background="@color/colorAccentGreen"
-            android:gravity="center_horizontal" />
+            android:textStyle="bold"
+            android:background="@drawable/rectangular_green_solid"
+            android:gravity="center" />
 
     </LinearLayout>
 
