--- a/app/src/main/res/layout/my_produce_list_item.xml
+++ b/app/src/main/res/layout/my_produce_list_item.xml
@@ -7,7 +7,9 @@
     android:layout_marginTop="@dimen/margin_10"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
-    android:layout_marginBottom="@dimen/dimen_10dp">
+    android:layout_marginBottom="@dimen/dimen_10dp"
+    android:clickable="true"
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
