--- a/app/src/main/res/layout/add_produce_dialog.xml
+++ b/app/src/main/res/layout/add_produce_dialog.xml
@@ -87,7 +87,8 @@
                             android:layout_gravity="center"
                             android:layout_marginEnd="8dp"
                             android:layout_marginRight="10dp"
-                            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />
+                            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
+                            tools:ignore="VectorDrawableCompat" />
                     </RelativeLayout>
                 </LinearLayout>
 
@@ -291,19 +292,21 @@
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
+                android:id="@+id/layout_submit_button"
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_20dp"
                 android:layout_marginTop="@dimen/margin_15"
                 android:layout_marginEnd="@dimen/dimen_20dp"
                 android:layout_marginBottom="@dimen/dimen_20dp"
-                android:background="@drawable/rounded_corners_button">
+                android:background="@drawable/rounded_corners_button"
+                android:visibility="visible">
 
                 <Button
                     android:id="@+id/produce_submit_button"
                     style="@style/Button"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:drawableEnd="@drawable/ic_right_chevron"
                     android:paddingEnd="15dp"
@@ -313,7 +316,43 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
             </LinearLayout>
+            <LinearLayout
+                android:id="@+id/edit_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:visibility="gone">
 
+
+
+                <Button
+                    android:id="@+id/delete_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/round_button_red"
+                    android:text="@string/bt_delete"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:drawableEnd="@drawable/ic_right_chevron" />
+                <Button
+                    android:id="@+id/edit_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="15dp"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/round_button_dark_green"
+                    android:text="Update"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:drawableEnd="@drawable/ic_right_chevron"/>
+            </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
