--- a/app/src/main/res/layout/my_produce_list_item.xml
+++ b/app/src/main/res/layout/my_produce_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +10,8 @@
     android:layout_marginEnd="10dp"
     android:layout_marginBottom="@dimen/dimen_10dp"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:onClick="editMyProduce">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
