--- a/app/src/main/res/layout/wallet_home.xml
+++ b/app/src/main/res/layout/wallet_home.xml
@@ -14,7 +14,7 @@
         android:visibility="gone"/>
 
     <fragment
-        android:id="@+id/nav_host_fragment"
+        android:id="@+id/wallet_home_container"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
